@@ -2,5 +2,14 @@
 
 一款使用 javafx ui 框架实现的 俄罗斯方块游戏
 
-效果预览
+## 效果预览
 
+![Screenshot](dist/微信截图_20240510101839.png)
+
+## 运行
+
+下载dist文件夹中javafxTetris.jar文件
+
+```
+java --module-path "你的javafx运行库路径" --add-modules javafx.controls,javafx.fxml -jar javafxTetris.jar
+```
